@startuml

title UC: Get Maximum Instantaneous Temperature Difference\nDomain Class Diagram - Use Case\nSystem / BackEnd / Domain\n(Implementation View Level 4)

/'
As a Room Owner [or Power User, or Administrator], I want to get the maximum
instantaneous temperature difference between a device in the room and the outside, in a given
period
'/
class ReadingsRESTController{
+ ReadingsRESTController(...)
+ getMaxTemperatureDifference (...) : ValueDTO
}

interface IReadingsService{
+ getMaxInstantTemperatureDifference(...) : Value
}

class TimeStamp{
- timeStamp: LocalDateTime
+ TimeStamp(...)
+ getTimeStamp() : LocalDateTime
}

class DeviceId{
- deviceId: String
+ getDeviceId() : String
}

class SensorModelName{
- sensorModelName : String
+ getSensorModelName() : String
}

class SensorId{
- sensorId: String
+ getSensorId() : String
}


interface ISensorRepository{
+ findSensorIdsByDeviceIdAndSensorModelName(...): Iterable<SensorId>
}

interface IReadingRepository{
+ findByIdentity(...) : Optional<Reading>
+ findReadingIdsBySensorIdInAGivenPeriod(...) :  Iterable<ReadingId>
}

class Reading{
- readingId : ReadingId
- value : Value
- timeStamp : TimeStamp
- sensorId : SensorId
+ Reading(...)
+ getReadingId() : ReadingId
+ getSensorId() : SensorId
+ getValue() : Value
+ getTimeStamp() : TimeStamp
}

class ValueMapper{
+toDTO(readingValue) : ValueDTO
}

class ValueDTO{
- value: Double
+ getValue() : Double
}

class ReadingId{
- readingId : String
+ ReadingId(...)
+ getReadingId() : String
}

class Sensor{
- sensorId : SensorId
- deviceId : DeviceId
- sensorModelName : SensorModelName
+ Sensor(...)
+ getSensorId() : SensorId
}

ReadingsRESTController ..> IReadingsService : uses
ReadingsRESTController ..> ValueDTO : uses
ReadingsRESTController ..> ValueMapper : uses

ValueMapper ..> ValueDTO : <creates>

IReadingsService ..> ISensorRepository : uses
IReadingsService ..> IReadingRepository : uses
IReadingsService ..> TimeStamp : uses

ReadingsRESTController ..> TimeStamp : <creates>

ISensorRepository *-- SensorId : contains
ISensorRepository ..> SensorModelName : uses
IReadingRepository ..> ReadingId : uses
ISensorRepository ..> DeviceId : uses

IReadingRepository *-- Reading : contains
IReadingRepository ..> SensorId : uses
IReadingRepository ..> TimeStamp : uses

Sensor "1" *-r- "1" SensorId : contains


@enduml